--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,47 +1,23 @@
-[package]
-name = "allfeat_sdk"
-version = "0.1.0"
-edition = "2024"
-authors = ["Allfeat labs. <hello@allfeat.com>"]
-license = "MIT"
-description = "Rust SDK for Allfeat, compiled to WebAssembly and exposed to TypeScript"
-repository = "https://github.com/allfeat/allfeat-sdk"
-homepage = "https://allfeat.com"
-readme = "README.md"
-
 [workspace]
+resolver = "3"
 members = [
-    ".",
-    "primitives-macros"
+    "primitives-macros",
+    "core",
+    "wasm"
 ]
 
-[lib]
-crate-type = ["cdylib"]
-
-[dependencies]
+[workspace.dependencies]
 # Allfeat
 primitives-macros = { path = "./primitives-macros" }
 
 # Polkadot-sdk interaction
-subxt = { version = "0.42.1", features = ["web", "jsonrpsee"], default-features = false }
-subxt-signer = { version = "0.42.1", features = ["web"], default-features = false }
 parity-scale-codec = "3.7.5"
-
-# Core wasm support
-wasm-bindgen = "0.2"
-wasm-bindgen-futures = "0.4.50"
-serde-wasm-bindgen = "0.6.5"
-
-console_error_panic_hook = "0.1"
-
-web-sys = { version = "0.3", features = ["console"] }
 
 hex = "0.4.3"
 serde = "1"
 serde_json = "1"
 
-[dev-dependencies]
-wasm-bindgen-test = "0.3"
+async-trait = "0.1"
 
 [profile.release]
 opt-level = "z"
@@ -49,7 +25,3 @@ lto = true
 codegen-units = 1
 panic = "abort"
 strip = true
-
-# Issue: https://github.com/rustwasm/wasm-pack/issues/1501
-[package.metadata.wasm-pack.profile.release]
-wasm-opt = ["--enable-bulk-memory"]
