--- a/midds/midds-types-codegen/Cargo.toml
+++ b/midds/midds-types-codegen/Cargo.toml
@@ -6,7 +6,7 @@ authors.workspace = true
 license.workspace = true
 repository.workspace = true
 homepage.workspace = true
-readme.workspace = true
+readme = "README.md"
 description = "Procedural macros for generating types for MIDDS runtime types"
 
 [lib]
