--- a/midds/Cargo.toml
+++ b/midds/Cargo.toml
@@ -6,7 +6,7 @@ authors.workspace = true
 license.workspace = true
 repository.workspace = true
 homepage.workspace = true
-readme.workspace = true
+readme = "README.md"
 description = "Substrate compatible MIDDS main crate."
 
 [lib]
