--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,8 @@ __pycache__/
 
 ## Node
 node_modules
+.pnpm-store/
+*.tsbuildinfo
 /src/doc/rustc-dev-guide/mermaid.min.js
 
 ## Rustdoc GUI tests
