--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ resolver = "3"
 members = [
     "client",
     "midds",
-    "midds/midds-types-codegen"
+    "midds/midds-types-codegen",
+    "wasm-bindings"
 ]
 
 [workspace.package]
@@ -17,9 +18,14 @@ readme = "README.md"
 
 [workspace.dependencies]
 # Allfeat
-allfeat-client = { path = "./client" }
-allfeat-midds = { path = "./midds" }
+allfeat-client = { path = "./client", default-features = false }
+allfeat-midds = { path = "./midds", default-features = false }
+allfeat-wasm-bindings = { path = "./wasm-bindings" }
 midds-types-codegen = { path = "./midds/midds-types-codegen" }
+
+# Testing dependencies
+tokio = { version = "1.0", features = ["full"] }
+subxt-signer = "0.43"
 
 # WASM
 wasm-bindgen = "0.2"
