--- a/midds/Cargo.toml
+++ b/midds/Cargo.toml
@@ -1,18 +1,18 @@
 [package]
 name = "allfeat-midds"
-version = "0.1.6"
+version = "0.1.8"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
 repository.workspace = true
 homepage.workspace = true
 readme = "README.md"
-description = "Substrate compatible MIDDS main crate."
+description = "Substrate/JS compatible MIDDS main crate."
 
 [dependencies]
 # Substrate
-frame-support = { version = "40.1.0", default-features = false }
-sp-runtime = { version = "41.1.0", default-features = false }
+frame-support = { version = "42.0.0", default-features = false }
+sp-runtime = { version = "43.0.0", default-features = false }
 parity-scale-codec = { version = "3.7.4", default-features = false, features = [
 	"derive",
 ] }
@@ -31,27 +31,23 @@ js-sys = { version = "0.3.67", optional = true }
 bomboni_wasm = { version = "0.1.64", optional = true, features = ["derive"] }
 
 # Allfeat
-allfeat-music-genres = { version = "0.2.5", default-features = false }
+allfeat-music-genres = { version = "0.2.7", default-features = false }
 midds-types-codegen = { path = "./midds-types-codegen", version = "0.1.0" }
 
 # For identifiers validation (std only)
 regex = { version = "1", optional = true }
 
 [features]
-default = ["full-std"]
+default = ["std"]
 std = [
 	"parity-scale-codec/std",
 	"scale-info/std",
-	"regex",
-]
-full-std = [
-    "std",
 	"frame-support/std",
 	"sp-runtime/std",
 	"allfeat-music-genres/std",
+	"regex",
 ]
 js = [
-  "std",
   "allfeat-music-genres/js",
   "wasm-bindgen",
   "wasm-bindgen-futures",
