--- a/midds-v2/Cargo.toml
+++ b/midds-v2/Cargo.toml
@@ -16,7 +16,7 @@ serde = { version = "1", optional = true }
 # For identifiers validation (std only)
 regex = { version = "1", optional = true }
 # For better error handling in std mode
-thiserror = { version = "1", optional = true }
+thiserror = { version = "2", default-features = false }
 
 allfeat-music-genres = { version = "0.2.9", default-features = false }
 
@@ -26,9 +26,7 @@ frame-support = { version = "41.0.0", default-features = false, optional = true 
 parity-scale-codec = { version = "3.7.4", default-features = false, optional = true, features = [
 	"derive",
 ] }
-scale-info = { version = "2.11.6", default-features = false, optional = true, features = [
-	"derive",
-] }
+scale-info = { version = "2.11.6", default-features = false, optional = true, features = ["derive"] }
 
 # WASM Bindings
 wasm-bindgen = { version = "0.2", optional = true }
@@ -48,7 +46,7 @@ std = [
   "allfeat-music-genres/std",
   "serde",
   "regex",
-  "thiserror"
+  "thiserror/std"
 ]
 web = [
   "std",
