--- a/midds-v2/Cargo.toml
+++ b/midds-v2/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "allfeat-midds-v2"
-version = "0.2.0"
+version = "1.0.0"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
@@ -10,7 +10,7 @@ readme = "README.md"
 description = "Substrate compatible MIDDS main crate."
 
 [dependencies]
-midds-v2-codegen = { path = "./midds-v2-codegen" }
+midds-v2-codegen = { path = "./midds-v2-codegen", version = "0.2.0" }
 
 frame-support = { version = "41.0.0", default-features = false }
 frame-system = { version = "41.0.0", default-features = false }
