--- a/midds-v2/Cargo.toml
+++ b/midds-v2/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "allfeat-midds-v2"
-version = "1.0.0"
+version = "1.0.1"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
@@ -20,7 +20,7 @@ parity-scale-codec = { version = "3.7.4", default-features = false, features = [
 scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
 
 # Typescript bindings
-ts-rs = "11"
+ts-rs = { version = "11", optional = true }
 
 
 [features]
@@ -30,6 +30,7 @@ std = [
   "frame-system/std",
   "parity-scale-codec/std",
   "scale-info/std",
+  "ts-rs"
 ]
 runtime-benchmarks = ["frame-support/runtime-benchmarks", "frame-system/runtime-benchmarks"]
 
