--- a/ats-cert-generator/Cargo.toml
+++ b/ats-cert-generator/Cargo.toml
@@ -15,6 +15,7 @@ wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 js-sys = "0.3"
+web-sys = { version = "0.3", features = ["console"] }
 wee_alloc = { version = "0.4", optional = true }
 console_error_panic_hook = { version = "0.1", optional = true }
 
