--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,2 @@
 [env]
-TS_RS_EXPORT_DIR = { value = "./packages/midds-js/src/", relative = true }
+TS_RS_EXPORT_DIR = { value = "./packages/types/midds/src/", relative = true }
