--- a/packages/types/midds/tsconfig.json
+++ b/packages/types/midds/tsconfig.json
@@ -6,14 +6,14 @@
     "moduleResolution": "bundler",
     "declaration": true,
     "declarationMap": true,
+    "emitDeclarationOnly": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
+    "isolatedModules": false,
     "outDir": "./dist",
     "rootDir": "./src"
   },
